# sandbox

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.plugin-runner  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
scripts/: build.sh  plugin_wrapper.py  test_plugin_execution.sh
src/: main.py
src/api/: execute.py  plugin_execute.py  providers.py
src/core/: config.py  docker_manager.py  executor_setup.py  posthog_client.py
src/core/executor/: __init__.py  client.py  exceptions.py  interface.py  models.py  registry.py
src/core/executor/providers/: __init__.py  aws_lambda.py  azure_container.py  gcp_cloud_run.py  local_docker.py
src/core/warm_pool/: __init__.py  container.py  health.py  manager.py
src/services/: execution_service.py  plugin_runner.py
src/utils/: auth.py
tests/: __init__.py  conftest.py  test_api_execute.py  test_docker_manager.py  test_execution_service.py
tests/test_executor/: test_client.py  test_interface.py  test_local_docker.py  test_registry.py
tests/test_warm_pool/: __init__.py  test_container.py  test_manager.py
